# spotidal

./: .gitignore  README.md  example_config.yml  pyproject.toml
spotidal/: __main__.py  cache.py  config.py  errors.py  match.py  retry.py  run.py  setup.py  sync.py
spotidal/providers/: base.py  spotify.py  tidal.py
spotidal/type/: config.py  models.py
src/spotify_to_tidal/: __main__.py  auth.py  cache.py  config.py  match.py  run.py  setup.py  sync.py  tidalapi_patch.py
src/spotify_to_tidal/providers/: __init__.py  base.py  spotify.py  tidal.py
src/spotify_to_tidal/type/: __init__.py  config.py  spotify.py
tests/unit/: test_auth.py  test_cache.py  test_setup_playlist_choices.py  test_spotify_provider.py  test_tidal_retry.py
