[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_to_tidal"
version = "1.0.7"
requires-python = ">= 3.12"

dependencies = [
  "spotipy>=2.24",
  "tidalapi>=0.8",
  "pyyaml>=6.0",
  "tqdm>=4.64",
  "sqlalchemy>=2.0",
  "inquirerpy>=0.3.4",
  "pytest>=8.0",
  "pytest-mock>=3.8",
]

[tool.ruff.lint]
select = ["D300"] # enforce """ over ''' for docstrings

[tools.setuptools.packages."spotify_to_tidal"]
where = "src"
include = "spotify_to_tidal*"

[project.scripts]
spotify_to_tidal = "spotify_to_tidal.__main__:main"
