[project]
name = "spotidal"
version = "2.0.0"
requires-python = ">= 3.12"

dependencies = [
  "spotipy>=2.24",
  "tidalapi>=0.8",
  "pyyaml>=6.0",
  "tqdm>=4.64",
  "sqlalchemy>=2.0",
  "inquirerpy>=0.3.4",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.8",
]

[project.scripts]
spotidal = "spotidal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spotidal"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["D300"] # enforce """ over ''' for docstrings
